Fixed issue with font url due to namespacing.

--- a/metroui-overrides.css
+++ b/metroui-overrides.css
@@ -1,11 +1,12 @@
 .metro .streamer .meter li {
-  background: url("/packages/chrismbeckett:metro-ui2/lib/images/meter-210.png") top left repeat-x;
+  background: url("/packages/chrismbeckett_metro-ui2/lib/images/meter-210.png") top left repeat-x;
 }
 
 @font-face {
   font-family: 'iconFont';
-  src: url('/packages/chrismbeckett:metro-ui2/lib/fonts/iconFont.eot');
-  src: url('/packages/chrismbeckett:metro-ui2/lib/fonts/iconFont.eot?#iefix') format('embedded-opentype'),
-    url('/packages/chrismbeckett:metro-ui2/lib/fonts/iconFont.ttf') format('truetype'),
-    url('/packages/chrismbeckett:metro-ui2/lib/fonts/iconFont.svg#iconFont') format('svg');
+  src: url('/packages/chrismbeckett_metro-ui2/lib/fonts/iconFont.eot');
+  src: url('/packages/chrismbeckett_metro-ui2/lib/fonts/iconFont.eot?#iefix') format('embedded-opentype'),
+    url('/packages/chrismbeckett_metro-ui2/lib/fonts/iconFont.woff') format('woff'),
+    url('/packages/chrismbeckett_metro-ui2/lib/fonts/iconFont.ttf') format('truetype'),
+    url('/packages/chrismbeckett_metro-ui2/lib/fonts/fonts/iconFont.svg#iconFont') format('svg');
 }
